// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageTitle Supports left align 1`] = `
<DocumentFragment>
  .c0 {
  text-align: center;
  padding-top: 0.5rem;
  padding-bottom: 1rem;
}

.c0 .left {
  text-align: left !important;
}

.c0 .default-page {
  padding-top: 2rem;
  padding-bottom: 0;
}

.c0 h1 {
  margin: 0;
  position: relative;
  font-size: 1.65rem;
}

.c0 h1 small {
  display: block;
  font-family: var(--font-secondary);
  font-size: 0.415em;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.25em;
  -moz-letter-spacing: 0.25em;
  -ms-letter-spacing: 0.25em;
  letter-spacing: 0.25em;
  color: var(--subtext-3);
  width: 100%;
}

.c0 h1 small.reversed {
  text-transform: none;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

@media (min-width:1600px) {
  .c0 {
    padding-top: 1rem;
    padding-bottom: 2rem;
  }
}

@media (min-width:1320px) {
  .c0 h1 {
    font-size: 1.75rem;
  }
}

@media (min-width:1600px) {
  .c0 h1 {
    font-size: 2rem;
  }
}

<div
    class="c0 container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="left  col"
      >
        <h1
          data-testid="PageTitle"
        >
          <small>
            Portfolio List
          </small>
          Manage portfolios
        </h1>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageTitle Supports page padding 1`] = `
<DocumentFragment>
  .c0 {
  text-align: center;
  padding-top: 0.5rem;
  padding-bottom: 1rem;
}

.c0 .left {
  text-align: left !important;
}

.c0 .default-page {
  padding-top: 2rem;
  padding-bottom: 0;
}

.c0 h1 {
  margin: 0;
  position: relative;
  font-size: 1.65rem;
}

.c0 h1 small {
  display: block;
  font-family: var(--font-secondary);
  font-size: 0.415em;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.25em;
  -moz-letter-spacing: 0.25em;
  -ms-letter-spacing: 0.25em;
  letter-spacing: 0.25em;
  color: var(--subtext-3);
  width: 100%;
}

.c0 h1 small.reversed {
  text-transform: none;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

@media (min-width:1600px) {
  .c0 {
    padding-top: 1rem;
    padding-bottom: 2rem;
  }
}

@media (min-width:1320px) {
  .c0 h1 {
    font-size: 1.75rem;
  }
}

@media (min-width:1600px) {
  .c0 h1 {
    font-size: 2rem;
  }
}

<div
    class="c0 container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="left default-page col"
      >
        <h1
          data-testid="PageTitle"
        >
          <small>
            Portfolio List
          </small>
          Manage portfolios
        </h1>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageTitle Supports reversed title and subtitle order 1`] = `
<DocumentFragment>
  .c0 {
  text-align: center;
  padding-top: 0.5rem;
  padding-bottom: 1rem;
}

.c0 .left {
  text-align: left !important;
}

.c0 .default-page {
  padding-top: 2rem;
  padding-bottom: 0;
}

.c0 h1 {
  margin: 0;
  position: relative;
  font-size: 1.65rem;
}

.c0 h1 small {
  display: block;
  font-family: var(--font-secondary);
  font-size: 0.415em;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.25em;
  -moz-letter-spacing: 0.25em;
  -ms-letter-spacing: 0.25em;
  letter-spacing: 0.25em;
  color: var(--subtext-3);
  width: 100%;
}

.c0 h1 small.reversed {
  text-transform: none;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

@media (min-width:1600px) {
  .c0 {
    padding-top: 1rem;
    padding-bottom: 2rem;
  }
}

@media (min-width:1320px) {
  .c0 h1 {
    font-size: 1.75rem;
  }
}

@media (min-width:1600px) {
  .c0 h1 {
    font-size: 2rem;
  }
}

<div
    class="c0 container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="left default-page col"
      >
        <h1
          data-testid="PageTitle"
        >
          Manage portfolios
          <small
            class="reversed"
          >
            Portfolio List
          </small>
        </h1>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageTitle Supports subtitle 1`] = `
<DocumentFragment>
  .c0 {
  text-align: center;
  padding-top: 0.5rem;
  padding-bottom: 1rem;
}

.c0 .left {
  text-align: left !important;
}

.c0 .default-page {
  padding-top: 2rem;
  padding-bottom: 0;
}

.c0 h1 {
  margin: 0;
  position: relative;
  font-size: 1.65rem;
}

.c0 h1 small {
  display: block;
  font-family: var(--font-secondary);
  font-size: 0.415em;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.25em;
  -moz-letter-spacing: 0.25em;
  -ms-letter-spacing: 0.25em;
  letter-spacing: 0.25em;
  color: var(--subtext-3);
  width: 100%;
}

.c0 h1 small.reversed {
  text-transform: none;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

@media (min-width:1600px) {
  .c0 {
    padding-top: 1rem;
    padding-bottom: 2rem;
  }
}

@media (min-width:1320px) {
  .c0 h1 {
    font-size: 1.75rem;
  }
}

@media (min-width:1600px) {
  .c0 h1 {
    font-size: 2rem;
  }
}

<div
    class="c0 container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="center  col"
      >
        <h1
          data-testid="PageTitle"
        >
          <small>
            Portfolio List
          </small>
          Manage portfolios
        </h1>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageTitle Supports title only 1`] = `
<DocumentFragment>
  .c0 {
  text-align: center;
  padding-top: 0.5rem;
  padding-bottom: 1rem;
}

.c0 .left {
  text-align: left !important;
}

.c0 .default-page {
  padding-top: 2rem;
  padding-bottom: 0;
}

.c0 h1 {
  margin: 0;
  position: relative;
  font-size: 1.65rem;
}

.c0 h1 small {
  display: block;
  font-family: var(--font-secondary);
  font-size: 0.415em;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.25em;
  -moz-letter-spacing: 0.25em;
  -ms-letter-spacing: 0.25em;
  letter-spacing: 0.25em;
  color: var(--subtext-3);
  width: 100%;
}

.c0 h1 small.reversed {
  text-transform: none;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

@media (min-width:1600px) {
  .c0 {
    padding-top: 1rem;
    padding-bottom: 2rem;
  }
}

@media (min-width:1320px) {
  .c0 h1 {
    font-size: 1.75rem;
  }
}

@media (min-width:1600px) {
  .c0 h1 {
    font-size: 2rem;
  }
}

<div
    class="c0 container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="center default-page col"
      >
        <h1
          data-testid="PageTitle"
        >
          Manage portfolios
        </h1>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
